--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+aniso8601==3.0.2
 astroid==2.0
 atomicwrites==1.1.5
 attrs==18.1.0
 click==6.7
 Flask==1.0.2
+Flask-RESTful==0.3.6
 isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
@@ -14,6 +16,7 @@ pluggy==0.6.0
 py==1.5.4
 pylint==2.0.0
 pytest==3.6.3
+pytz==2018.5
 six==1.11.0
 typed-ast==1.1.0
 Werkzeug==0.14.1
