--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,15 @@ aniso8601==3.0.2
 astroid==2.0
 atomicwrites==1.1.5
 attrs==18.1.0
+certifi==2018.4.16
+chardet==3.0.4
 click==6.7
+coverage==4.5.1
+coveralls==1.3.0
+docopt==0.6.2
 Flask==1.0.2
 Flask-RESTful==0.3.6
+idna==2.7
 isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
@@ -17,7 +23,9 @@ py==1.5.4
 pylint==2.0.0
 pytest==3.6.3
 pytz==2018.5
+requests==2.19.1
 six==1.11.0
 typed-ast==1.1.0
+urllib3==1.23
 Werkzeug==0.14.1
 wrapt==1.10.11
