--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,14 @@ python:
 install:
   - pip install -r requirements.txt
 
+  - pip install coveralls
+
+script:
+  - pytest
+  - coverage run --source=app -m pytest  && coverage report
+
 after_success:
   - coveralls
 
-script:
-- pytest
-
-cache: pip
+after_success:
+  coveralls
