--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: python
 python:
-
-  - "3.5"
   - "3.6.5"
   
 install:
   - pip install -r requirements.txt
 # command to run tests
 script:
-  - py.test # or py.test for Python versions 3.5 and below
+  - tests.py # or py.test for Python versions 3.5 and below
