--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,9 @@ lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
 more-itertools==4.2.0
+passlib==1.7.1
 pluggy==0.6.0
+psycopg2==2.7.5
 py==1.5.4
 pycodestyle==2.4.0
 pylint==2.0.0
