--- a/.gitignore
+++ b/.gitignore
@@ -123,9 +123,9 @@ venv.bak/
 .mypy_cache/
 
 ### Python Patch ###
-.venv/
-.vscode
-__pycache__
+*.venv/
+*.vscode
+*__pycache__
 test.py
 
 ### venv ###
