--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
 aniso8601==3.0.2
+asn1crypto==0.24.0
 astroid==2.0
 atomicwrites==1.1.5
 attrs==18.1.0
 autoenv==1.0.0
 autopep8==1.3.5
 certifi==2018.4.16
+cffi==1.11.5
 chardet==3.0.4
 click==6.7
 coverage==4.5.1
 coveralls==1.3.0
+cryptography==2.3
 docopt==0.6.2
 Flask==1.0.2
 Flask-RESTful==0.3.6
@@ -17,6 +20,7 @@ idna==2.7
 isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
+jwt==0.5.4
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
@@ -26,6 +30,8 @@ pluggy==0.6.0
 psycopg2==2.7.5
 py==1.5.4
 pycodestyle==2.4.0
+pycparser==2.18
+PyJWT==1.6.4
 pylint==2.0.0
 pytest==3.6.3
 pytest-cov==2.5.1
