--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,11 @@
 language: python
 python:
   - "3.6.5"
-  
+before_script:
+  - createdb my-diary
+services:
+  - postgresql
+
 install:
   - pip install -r requirements.txt
 # command to run tests
