--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
   - pip install -r requirements.txt
 # command to run tests
 script:
-  - pytest --cov=app
+  - pytest 
 
 after_success:
      - "coveralls"
