--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ language: python
 
 python:
   - "3.6.5"
+  
+postgres:
+  host: localhost
+  
 before_script:
   - psql -c 'CREATE DATABASE "my-diary";' -U postgres
   - psql -c "CREATE USER kelvin WITH PASSWORD 'spongebob';" -U postgres 
