--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ install:
   - pip install -r requirements.txt
 # command to run tests
 script:
-  - pytest --cov==app
+  - pytest 
+  - pytest --cov=app
 
 after_success:
      - coveralls
