--- a/.gitignore
+++ b/.gitignore
@@ -108,6 +108,7 @@ ENV/
 env.bak/
 venv.bak/
 
+
 # Spyder project settings
 .spyderproject
 .spyproject
@@ -126,7 +127,7 @@ venv.bak/
 *.vscode
 *__pycache__
 rytest.py
-
+.env
 ### venv ###
 # Virtualenv
 # http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
